--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
     <div class="w-full h-72 pt-10 mb-72" style="background: url(img/pattern1-bg.png); background-repeat: no-repeat; background-size: cover;">
         <h1 class="text-center text-4xl font-bold font-sans text-white pb-6">readerrr</h1><br>
         <span class="align-center text-center text-white">Save now, read later</span><br>
-        <div class="max-w-xs rounded-lg shadow-xl h-72 bg-white mx-auto">
-
-        </div>
+        <div id="wrapperLink" class="max-w-sm md:max-w-4xl rounded-lg shadow-xl h-72 bg-white mx-auto"></div>
+        <button class="py-4 px-6 mx-auto rounded-lg shadow bg-blue-600 hover:bg-blue-900 text-white text-bold text-center">Load</button>
     </div>
 
     
     <div class="max-w-xs h-20 md:max-w-2xl bg-white rounded-lg pl-4 mx-auto mt-10 overflow-hidden shadow-xl">
         <form>
             <input class="py-6 focus:outline-none" id="addLink" type="text" placeholder="Paste or type a link to an article to save">
-            <button class="py-9  px-8 bg-blue-900 float-right rounded-tr-lg rounded-br-lg"><img src="img/icon-arrow.svg"></button>
+            <button class="py-9  px-8 bg-blue-900 float-right rounded-tr-lg rounded-br-lg" id="cta"><img src="img/icon-arrow.svg"></button>
         </form> 
     </div>
 
     </div>
-    
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
